syntax = "proto3";

service ReviewService {
    rpc GetReviews (GetReviewsRequest) returns (GetReviewsResponse) {}
    rpc GetReview (GetReviewRequest) returns (GetReviewResponse) {}
}

message Review {
    required int32 rating = 1;
    required string comment = 2;
    required string userId = 3;
    required string restaurantId = 4;
    string _id = 5;
}

message GetReviewsRequest {
    string usedId = 1;
    string restaurantId = 2;
    int32 rating = 3;
}

message GetReviewsResponse {
    required repeated Review reviews = 1;
}

message GetReviewRequest {
    required string _id = 1;
}

message GetReviewResponse {
    required Review review = 1;
}
