syntax = "proto3";

service RestaurantService {
    rpc GetRestaurants (GetRestaurantsRequest) returns (GetRestaurantsResponse) {}
    rpc GetRestaurant (GetRestaurantRequest) returns (GetRestaurantResponse) {}
    rpc InsertRestaurant (InsertRestaurantRequest) returns (InsertRestaurantResponse) {}
    rpc UpdateRestaurant (UpdateRestaurantRequest) returns (UpdateRestaurantResponse) {}
    rpc DeleteRestaurant (DeleteRestaurantRequest) returns (DeleteRestaurantResponse) {}
}

message Restaurant {
    required string name = 1;
    string Address address = 2;
    string lastName = 3;
    optional string _id = 4;
}

message Address {
    string street = 1;
    int32 houseNumber = 2;
    string city = 3;
    string zipCode = 4;
}

message GetRestaurantsRequest {
    optional string name = 1;
}

message GetRestaurantsResponse {
    repeated Restaurant restaurants = 1;
}

message GetRestaurantRequest {
    required string _id = 1;
}

message GetRestaurantResponse {
    Restaurant restaurant = 1;
}

message InsertRestaurantRequest {
    required Restaurant restaurant = 1;
}

message InsertRestaurantResponse {
    Restaurant restaurant = 1;
}

message UpdateRestaurantRequest {
    required string _id = 1;
    required Restaurant restaurant = 2;
}

message UpdateRestaurantResponse {}

message DeleteRestaurantRequest {
    required string _id = 1;
}

message DeleteRestaurantResponse {}
